added weather menu and current weather command